# firebae-cm

./: .gitignore  Cargo.toml  LICENCE  README.md
examples/authentication/: Cargo.toml
examples/authentication/src/: main.rs
examples/managed_oauth/: Cargo.toml
examples/managed_oauth/src/: main.rs
examples/with_data/: Cargo.toml
examples/with_data/src/: main.rs
src/: lib.rs
src/client/: client.rs  mod.rs  response.rs
src/message/: body.rs  message.rs  mod.rs  receiver.rs
src/notification/: android.rs  color.rs  fcm.rs  mod.rs  notification.rs
src/settings/: android.rs  apns.rs  fcm.rs  mod.rs  webpush.rs
src/utils/: error.rs  map.rs  mod.rs
