[package]
name = "firebae-cm"
version = "0.3.0"
edition = "2021"

description = "A Firebase Cloud Messaging Http V1 implementation"
license = "MIT"
homepage = "https://github.com/Vesafary/firebae-cm"
repository = "https://github.com/Vesafary/firebae-cm"

[dependencies]
serde =             { version = "1.0.158", features = ["derive"] }
serde_json =        { version = "1.0.94" }
reqwest =           { version = "0.11.14", features = ["json"], default-features=false }
time =              { version = "0.3.20", features = ["formatting"] }
log =               { version = "0.4.17" }
thiserror =         { version = "1.0.40" }
gcp_auth =          { version = "0.7.5", optional = true }
once_cell =         { version = "1.17.1", optional = true }
uuid =              { version = "1"}

[features]
oauth = ["dep:gcp_auth", "dep:once_cell"]
