[package]
name = "firebae-cm"
version = "0.4.0"
edition = "2021"

description = "A Firebase Cloud Messaging Http V1 implementation"
license = "MIT"
homepage = "https://github.com/Vesafary/firebae-cm"
repository = "https://github.com/Vesafary/firebae-cm"

[dependencies]
firebae-derive =    { version = "0.1.0" }
serde =             { version = "1.0.158", features = ["derive"] }
serde_json =        { version = "1.0.94" }
reqwest =           { version = "0.11.15", features = ["json", "rustls-tls"], default-features = false }
time =              { version = "0.3.20", features = ["formatting"] }
log =               { version = "0.4.17" }
thiserror =         { version = "1.0.40" }
gcp_auth =          { version = "0.7.5", optional = true }
tokio =             { version = "1.26.0", features = ["sync", "parking_lot"], default-features = false, optional = true }

[features]
oauth = ["dep:gcp_auth", "dep:tokio"]


# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
